# Stormfield

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/kk_ctrl_station/lib/kk_ctrl_station/: back_cam  control_rover  crop_cam  front_cam  image_subscriber
install/kk_ctrl_station/share/kk_ctrl_station/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kloudkat/share/kloudkat/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/stormfield/share/stormfield/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
kk_ctrl_station/: setup.cfg
kloudkat/: CMakeLists.txt  package.xml
kloudkat/description/big_plant/: plant.material
kloudkat/description/meshes/stl/: Delta_Upper.stl  FrontWheels.stl
kloudkat/launch/: launch_sim.launch.py
kloudkat/worlds/: new_farm.world
src/kk_ctrl_station/: setup.py
src/kk_ctrl_station/kk_ctrl_station/: crop_cam.py  front_cam.py
src/kloudkat/description/: gazebo_control.xacro  robot_core.xacro
src/kloudkat/description/meshes/stl/: DeltaBaseplate.stl  (+3 more)
src/kloudkat/launch/: rsp.launch.py
src/kloudkat/worlds/: farm_base.world
src/stormfield/: README.md
src/stormfield/description/: cloudkat_v1.sdf  cloudkat_v1.urdf  cloudkat_v1.urdf.xacro
src/stormfield/launch/: rsp_sim.launch.py
stormfield/: CMakeLists.txt  package.xml
stormfield/description/: cloudkat_v1_gazebo.xacro
stormfield/description/meshes/stl/: EndEffectorPlate.stl  Frame.stl  Frame_10.stl  Frame_1000.stl
stormfield/launch/: rsp.launch.py
(+4 files in other folders)
