<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kk_ctrl_station</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mtalhaaamir11@gmail.com">m_talha_aamir</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
